# neurohub1

./: .env  .env.example  .gitignore  README.md  pyproject.toml  start.bat  start.ps1
neurohub/: __init__.py  cli.py  client.py  config.py  conversation.py  desktop_app.py  models.py  web_app.py
neurohub/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai_compat.py
neurohub/static/: app.js  index.html  styles.css
tests/: test_config.py  test_desktop_app.py  test_web_app.py
