[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurohub"
version = "1.0.0"
description = "Unified AI chat client — OpenAI, Anthropic, Gemini, OpenRouter and more"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "NeuroHub" }]
keywords = ["ai", "llm", "openai", "anthropic", "gemini", "chatbot", "api"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[project.scripts]
neurohub = "neurohub.desktop_app:main"
neurohub-desktop = "neurohub.desktop_app:main"
neurohub-web = "neurohub.web_app:main"
neurohub-cli = "neurohub.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["neurohub"]

[tool.hatch.build.targets.wheel.force-include]
"neurohub/static" = "neurohub/static"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
